2005-06-23  Guilhem Lavaux  <guilhem@kaffe.org>

	* kaffe/kaffevm/soft.c
	(soft_div, soft_rem): Check for the divisor to return the correct
	value on all processors.

2005-06-23  Guilhem Lavaux  <guilhem@kaffe.org>

	* kaffe/kaffevm/Makefile.am
	(libkaffevm_la_SOURCES): Added javacall.c

	* kaffe/kaffevm/Makefile.in: Regenerated.

	* kaffe/kaffevm/classMethod.c,
	kaffe/kaffevm/classMethod.h
	(initCollector): Moved to gc.h
	(parsed_signature): Added real_nargs.
	(PSIG_RNARGS): New macro.
	(KaffeVM_countRealNumberOfArgs): New function to retrieve the real
	number of argument slot used.
	
	Doxified a bit.
	
	* kaffe/kaffevm/gc.h
	(initCollector): Moved from classMethod.h

	* kaffe/kaffevm/javacall.c
	(KaffeVM_callMethodA, KaffeVM_callMethodV): Moved from support.c
	along with their macros.
	(KaffeVM_countRealNumberOfArgs): New function.
	
	kaffe/kaffevm/support.c:
	(KaffeVM_callMethodA, KaffeVM_callMethodV): Moved out.

	* libraries/clib/native/ClassLoader.c
	(loadClass): Check whether the class name is well constructed.

2005-06-23  Ito Kazumitsu  <kaz@maczuka.gcd.org>

	* FAQ/FAQ.charsets: New file.

2005-06-21  Guilhem Lavaux  <guilhem@kaffe.org>

	* config/mips/atomic.h: Removed all register aliases to support
	old gcc compiler.

	Reported by Riccardo Mottola  <rmottola@users.sf.net>

2005-06-21  Guilhem Lavaux  <guilhem@kaffe.org>

	* config/config-hacks.c: We must redefine __builtin_trap until gcc
	3.1.

	Reported by Andrew Pinski <pinskia@physics.uc.edu>

2005-06-21  Guilhem Lavaux  <guilhem@kaffe.org>

	* config/katomic.h: Include config-hacks.h to be sure the hacks are
	taken into account.

	* config/config-hacks.h: Removed spurious argument.

2005-06-21  Guilhem Lavaux  <guilhem@kaffe.org>

	* m4/ax_create_stdint_h.m4: Removed some broken & unused m4 code line.

	* configure: Regenerated.

	* config/config-std.h,
	kaffe/kaffevm/lerrno.h: Moved definition of ENOTSUP to prevent
	redefinition.

	* kaffe/kaffevm/debug.c,